--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         <div class="container">
             <a href="#" class="logo"><img src="images/W..svg" alt=""></a>
             <nav>
-                <ul class="navbar">
-                    <li><a href="#"></a>home</li>
-                    <li><a href="#"></a>new</li>
-                    <li><a href="#"></a>popular</li>
-                    <li><a href="#"></a>trending</li>
-                    <li><a href="#"></a>categories</li>
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">new</a></li>
+                    <li><a href="#">popular</a></li>
+                    <li><a href="#">trending</a></li>
+                    <li><a href="#">categories</a></li>
+
 
                 </ul>
             </nav>
@@ -24,38 +25,90 @@
         </div>
     </header>
 
-    <main class="hero">
+
+
+
+    <main>
         <div class="container">
-            <div>
-                <div class="vasiliss">
-                    <img src="images/vasilis-chatzopoulos-6lwyzronth8-unsplash.png" alt="">
+            <div class="hero">
+                <div class="content">
+                    <div class="vasi">
+                        <img src="images/vasilis-chatzopoulos-6lwyzronth8-unsplash.png" alt="">
+                    </div>
+
+                    <div class="title"> 
+                        <h1>The Bright Future of Web 3.0?</h1>
+                    </div>
+
+                    <div class="com">
+                        <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
+                        <div class="btn"><a href="#">read more</a></div>
+                    </div>
                 </div>
-                <div>The Bright Future of Web 3.0?</div>
-                <div>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</div>
-                <a href="#" class="btn">read more</a>
-            </div>
-        
-            <div></div>   
-    </div>
+            
+                <div class="article">
+                    <h1>New</h1>
+                        <h2>Hydrogen Vs Electric Cars</h2>
+                        <p>Will hydrogen-fueled cars ever catch up to EVS?</p>
+                        <p class="line"></p>
+                        <h2>The Downsides of AI Artistry</h2>
+                        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+                        <p class="line"></p>
+                        <h2>Is VC Funding Drying Up?</h2>
+                        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+                </div>
+            </div>   
+        </div>
     </main>
 
-    <!---section class="content" >
-        <div class="container">
-            <div>
-                <div></div>
-                <div></div>
+
+
+
+
+
+
+
+
+    <section class="container" >
+        <div class="contentis">
+            <div class="diapo2">
+                <div>
+                    <img src="images/Bitmap.png" alt="ecran"></div>
+                <div class="info">
+                    <p>01</p>
+                    <h3>Reviving Retro PCs</h3>
+                    <p>What happens when old PCs are given modern upgrades?</p>
+                </div>
             </div>
-            <div>
-                <div></div>
-                <div></div>
+
+
+
+            <div class="diapo">
+                <div class="info1">
+                    <img src="images/Bitmap (1).png" alt="clavie">
+                </div>
+                <div>
+                    <p>02</p>
+                    <h3>Top 10 Laptops of 2022</h3>
+                    <p>Our best picks for various needs and budgets.</p>
+                </div>
             </div>
-            <div>
-                <div></div>
-                <div></div>
+
+
+
+            <div class=" diapo1">
+                <div class="info3">
+                    <img src="images/Bitmap (2).png" alt="machin">
+                </div>
+                <div>
+                    <p>03</p>
+                    <h3>The Growth of Gaming</h3>
+                    <p>How the pandemic has sparked fresh opportunities.</p>
+                </div>
             </div> 
         </div>
 
-    </!---section>
+    <section>
 
 
 </body>
